@@ -75,6 +75,7 @@ t/recv.t
 t/repeat.t
 t/scope_leak.t
 t/socket.t
+t/string-eval-leak.t
 t/sysopen.t
 t/system.t
 t/truncate.t
